--- a/NetflixGPT/index.html
+++ b/NetflixGPT/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/download.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netflix</title>
+    <title>StreamPilot</title>
   </head>
   <body>
     <div id="root"></div>
